Bug 846595 - [BB] Align value-selector tick to left for RTL languages (i.e. Arabic). r=arnau

--- a/apps/communications/ftu/css/style.css
+++ b/apps/communications/ftu/css/style.css
@@ -1152,6 +1152,12 @@ i.hack-first-child {
   background: url("images/checked.png") no-repeat right center / 100%;
 }
 
+/* Right to left: position the check mark to the left */
+html[dir="rtl"] [data-type="list"].pack-value-selector li label:not([for]) input + span:after {
+  left: 0;
+  margin-left: auto;
+}
+
 [data-type="list"].pack-value-selector li label:not([for]) input + span + p {
   font-weight: normal;
 }
